fixed audio controls visibility

--- a/src/components/AudioPlayerComponent/AudioPlayerComponent.module.scss
+++ b/src/components/AudioPlayerComponent/AudioPlayerComponent.module.scss
@@ -1,3 +1,39 @@
+.root {
+  display: flex;
+  align-items: center;
+
+  > div:first-child {
+    width: 100%;
+  }
+
+  .time {
+    transition: 0.2s all ease-in;
+  }
+
+  .player {
+    transform: translateX(0);
+    transition: 0.2s ease-in-out;
+    transition-property: opacity, transform;
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  &_playing,
+  &:hover {
+    .player {
+      opacity: 1;
+      pointer-events: auto;
+      transform: translateX(36px);
+    }
+
+    .time {
+      transform: translateX(40px);
+      opacity: 0;
+      pointer-events: none;
+    }
+  }
+}
+
 .button {
   margin-left: 16px;
   display: flex;
